packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/repo_projected_page_family_cluster_not_found_error.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
expression: value
---
{
  "code": "NOT_FOUND",
  "message": "repo `gateway-sync` does not contain projected page family `Tutorial` in page `repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve`"
}
